# CROEM-ML2025

./: .buildinfo  .gitignore  README.md  genindex.html  index.html  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js
_sources/content/: 01_Basics-DecisionTrees.ipynb  01_MLTheory.ipynb  02_Basics-Gradient.ipynb  02_PythonML.ipynb  03_NeuralNetworks.ipynb  04_ConvNNs.ipynb  04_NeuralNetworks.ipynb  05_ConvNeuralNetworks.ipynb
content/: 00_Intro.html  01_Basics-DecisionTrees.html  01_MLTheory.html  02_Basics-Gradient.html  02_PythonML.html  03_DecisionTrees.html  03_NeuralNetworks.html  04_ConvNNs.html  04_NeuralNetworks.html  05_ConvNeuralNetworks.html  05_Final.html  05_Finale.html  06_Finale.html
croem-ml2025/: _config.yml  _toc.yml
croem-ml2025/content/: 00_Intro.md  01_Basics-DecisionTrees.ipynb  02_Basics-Gradient.ipynb  02_PythonML.ipynb  03_DecisionTrees.ipynb  03_NeuralNetworks.ipynb  04_ConvNNs.ipynb  05_ConvNeuralNetworks.ipynb  05_Final.ipynb
exercises/: higgs_classification.ipynb
