[project]
name = "croem-ml2025"
version = "0.1.0"
description = "Material for CROEM ML 2025 Workshop"
authors = [
    {name = "Roy Cruz",email = "roy.cruz@upr.edu"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter-book (>=1.0.4.post1,<2.0.0)",
    "jupytext (>=1.17.1,<2.0.0)",
    "ghp-import (>=2.1.0,<3.0.0)",
    "sphinxcontrib-mermaid (>=1.0.0,<2.0.0)",
    "pre-commit (>=4.2.0,<5.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "notebook (>=7.4.2,<8.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "numpy (>=2.2.5,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
